Update JpaEntityManagerFactory.java